compiler/parser/src/snapshots/rustpython_parser__context__tests__assign_named_expr.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..14,
        custom: (),
        node: If {
            test: Located {
                range: 3..8,
                custom: (),
                node: NamedExpr {
                    target: Located {
                        range: 3..4,
                        custom: (),
                        node: Name {
                            id: "x",
                            ctx: Store,
                        },
                    },
                    value: Located {
                        range: 7..8,
                        custom: (),
                        node: Constant {
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    },
                },
            },
            body: [
                Located {
                    range: 10..14,
                    custom: (),
                    node: Pass,
                },
            ],
            orelse: [],
        },
    },
]
