compiler/parser/src/snapshots/rustpython_parser__context__tests__aug_assign_subscript.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..17,
        custom: (),
        node: AugAssign {
            target: Located {
                range: 0..4,
                custom: (),
                node: Subscript {
                    value: Located {
                        range: 0..1,
                        custom: (),
                        node: Name {
                            id: "x",
                            ctx: Load,
                        },
                    },
                    slice: Located {
                        range: 2..3,
                        custom: (),
                        node: Name {
                            id: "y",
                            ctx: Load,
                        },
                    },
                    ctx: Store,
                },
            },
            op: Add,
            value: Located {
                range: 8..17,
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            range: 9..10,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 12..13,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 15..16,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
        },
    },
]
